--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -40,5 +40,32 @@ span:hover {
   font-weight: 600;
 }
 .ismatch{
- color: red;
+ color: #77a4eb!important;
+}
+.custom-scroll{
+  overflow-x: hidden !important;
+  box-shadow: inset 0 0 5px grey; 
+  /* border-radius: 10px; */
+}
+.custom-scroll::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.custom-scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(217, 203, 203); 
+  border-radius: 15px;
+  background-color: white !important;
+}
+ 
+/* Handle */
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #4285f4!important; 
+  border-radius: 15px;
+  
+}
+
+/* Handle on hover */
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
 }
