--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+
+/* 
+
+bodycolor=#2B2B2B
+wrapercolor=#423F3E
+wrapertwocolor=#171010
+buttoncolor=#362222
+*/
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+background-color: #2B2B2B !important;
 }
 
 code {
