--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-body {
-  color: white !important;
-}
+
 .MuiBox-root.css-19kzrtu {
   padding: 12px 0 !important;
 }
@@ -17,10 +15,10 @@ body {
 /*global box shadow   */
 .global-wrappar-shadow {
   padding: 8px 12px;
-  background: #423f3e;
+  background: #eaf6f6;
   height: 100vh;
   width: 100%;
-  box-shadow: 42px 42px 81px #3a3737, -42px -42px 81px #4a4745;
+  /* box-shadow: 42px 42px 81px #eaf6f6, -42px -42px 81px #eaf6f6; */
 }
 
 /* header  */
@@ -28,4 +26,17 @@ body {
   position: absolute;
   top: 20px;
   right: 20px;
+}
+
+
+
+
+/* common input field  */
+
+.js-input{
+  width: 100%;
+  border: 0.5px solid rgb(188, 185, 185);
+  padding: 10px 18px;
+  outline: none;
+  font-size: 12px;
 }
