--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -4,18 +4,16 @@
 
   height: 100vh;
 }
-.child-container {
-}
+
 .menu-route-wraper {
   display: flex;
   align-items: center;
   cursor: pointer;
 }
-.first-level-title{
+.first-level-title {
   margin-left: 12px;
   font-size: 14px;
-  color: gray;
-  
+  /* color: gray; first level menu title color  */
 }
 span {
   color: rgba(0, 0, 0, 0.8);
@@ -25,26 +23,38 @@ span {
 span:hover {
   color: rgba(63, 116, 224, 1);
 }
-.parent-menu-item{
+.parent-menu-item {
   margin: 0;
   padding: 5px 8px;
+  overflow: hidden;
+  transition: 0.5s linear all;
+}
 
+.parent-menu-item .hide {
+  height: 100%;
+  max-height: 0;
+  /* transition: 0.5s ease-in-out all; */
 }
-.parent-menu-item li{
- list-style: none;
+.parent-menu-item .show {
+  height: 100%;
+  max-height: 500px;
+  /* transition: 0.5s ease-in-out all; */
 }
-.parent-menu-item a{
+.parent-menu-item li {
+  list-style: none;
+}
+.parent-menu-item a {
   text-decoration: none;
   color: gray;
   font-size: 13px;
   font-weight: 600;
 }
-.ismatch{
- color: #77a4eb!important;
+.ismatch {
+  color: #77a4eb !important;
 }
-.custom-scroll{
+.custom-scroll {
   overflow-x: hidden !important;
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px grey;
   /* border-radius: 10px; */
 }
 .custom-scroll::-webkit-scrollbar {
@@ -53,19 +63,18 @@ span:hover {
 
 /* Track */
 .custom-scroll::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(217, 203, 203); 
+  box-shadow: inset 0 0 5px rgb(217, 203, 203);
   border-radius: 15px;
-  background-color: #423F3E !important;
+  background-color: #66bfbf !important;
 }
- 
+
 /* Handle */
 .custom-scroll::-webkit-scrollbar-thumb {
-  background: #4285f4!important; 
+  background: #f76b8a !important;
   border-radius: 15px;
-  
 }
 
 /* Handle on hover */
 .custom-scroll::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
+  background: #b30000;
 }
