--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -25,7 +25,7 @@ span:hover {
 }
 .parent-menu-item {
   margin: 0;
-  padding: 5px 8px;
+  padding: 3px 10px;
   overflow: hidden;
   transition: 0.5s linear all;
 }
@@ -54,7 +54,7 @@ span:hover {
 }
 .custom-scroll {
   overflow-x: hidden !important;
-  box-shadow: inset 0 0 5px grey;
+  /* box-shadow: inset 0 0 5px grey; */
   /* border-radius: 10px; */
 }
 .custom-scroll::-webkit-scrollbar {
@@ -63,7 +63,7 @@ span:hover {
 
 /* Track */
 .custom-scroll::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(217, 203, 203);
+  /* box-shadow: inset 0 0 5px rgb(217, 203, 203); */
   border-radius: 15px;
   background-color: #66bfbf !important;
 }
@@ -77,4 +77,7 @@ span:hover {
 /* Handle on hover */
 .custom-scroll::-webkit-scrollbar-thumb:hover {
   background: #b30000;
+}
+.robin{
+  
 }
