--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,12 @@
 
 /*global box shadow   */
 .global-wrappar-shadow {
-  padding: 8px 12px;
+  padding: 15px;
   background: #eaf6f6;
-  height: 100vh;
-  width: 100%;
+  border-radius: 8px;
+
+  /* height: 100vh;
+  width: 100%; */
   /* box-shadow: 42px 42px 81px #eaf6f6, -42px -42px 81px #eaf6f6; */
 }
 
@@ -40,6 +42,15 @@
   padding: 10px 18px;
   outline: none;
   font-size: 12px;
+}
+.js-form-input {
+  width: 100%;
+  border: 0.5px solid rgb(188, 185, 185);
+  padding: 5px 18px;
+  outline: none;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-bottom: 15px;
 }
 
 
