--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,25 @@
 
 /* custom table  */
 .table-responsive {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
 .table-responsive table td {
   font-size: 12px;
   color: #5a5a55;
+}
+.table-responsive table tr{
+  border: .5px solid rgb(212, 206, 206) !important;
+}
+.table-responsive table tr:hover{
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 /*global box shadow   */
