--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
   width: 100%;
   margin: 0 auto;
 }
+.table-responsive table{
 
+
+}
 .table-responsive table td {
   font-size: 12px;
   color: #5a5a55;
