--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -54,8 +54,12 @@ span:hover {
 }
 .custom-scroll {
   overflow-x: hidden !important;
+
   /* box-shadow: inset 0 0 5px grey; */
   /* border-radius: 10px; */
+}
+.right-side{
+height: 80vh !important;
 }
 .custom-scroll::-webkit-scrollbar {
   width: 2px;
