--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -74,7 +74,7 @@ height: 80vh !important;
 
 /* Handle */
 .custom-scroll::-webkit-scrollbar-thumb {
-  background: #f76b8a !important;
+  background: #675a5c !important;
   border-radius: 15px;
 }
 
