--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -50,16 +50,20 @@ span:hover {
   font-weight: 600;
 }
 .ismatch {
-  color: #77a4eb !important;
+  color: var(--main) !important;
+}
+.parent-menu-item a:hover {
+  color: var(--main) !important;
 }
 .custom-scroll {
+  overflow: scroll;
   overflow-x: hidden !important;
 
   /* box-shadow: inset 0 0 5px grey; */
   /* border-radius: 10px; */
 }
-.right-side{
-height: 80vh !important;
+.right-side {
+  height: 80vh !important;
 }
 .custom-scroll::-webkit-scrollbar {
   width: 2px;
@@ -74,12 +78,19 @@ height: 80vh !important;
 
 /* Handle */
 .custom-scroll::-webkit-scrollbar-thumb {
-  background: #675a5c !important;
+  background: var(--main) !important;
   border-radius: 15px;
 }
 
 /* Handle on hover */
 .custom-scroll::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: var(--main);
 }
 
+.sidebar-container-scroll {
+  background: var(--primarybg);
+  padding: 10px 4px;
+  height: 90vh;
+  bottom: 0;
+  margin-left: 20px;
+}
