--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,23 @@ backgroundcolor2=#f76b8a
 
 
 */
+:root {
+  --primarybg: #ffffff;
+  --secondary: #b6eb7a;
+  --main: #17706e;
+  --mainButton: #fb7813;
+}
 body {
-  background-color: #fcfefe !important;
+  /* background-color: #fcfefe !important;1st style */
+  /* background-color: #F9FCFB !important; */
+  background-color: var(--primarybg) !important;
 }
 
 .common-background-color {
-  background: #fcfefe;
+  background: var(--main);
 }
 .component-background-color {
-  background: #eaf6f6;
+  background: #be79df;
 }
 .login-wraper .right-side {
   position: absolute;
@@ -112,37 +120,62 @@ h6,
 span,
 a {
   font-family: "Montserrat", sans-serif;
-  
 }
 
 p,
 small,
 strong {
   font-family: "Open Sans", sans-serif;
- 
 }
 
-.nav.nav-tabs{
+/* navlink customize  */
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
   border: none;
+  color: var(--main)!important;
+  border-bottom:1px solid var(--main) !important;
+  border-width: 3px !important;
+  padding: 5px 0;
 }
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
-  
+/* .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active:hover{
+color: black !important;
+} */
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link {
+  color: black;
+  padding: 5px 0;
+  margin-right: 30px;
+  font-weight: 600;
 }
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active:hover{
- 
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link:hover {
+  color: var(--main) !important;
 }
-.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
-  isolation:none !important; 
-  border-color: white !important;
+.nav-tabs {
+  --bs-nav-tabs-border-width: 0px !important;
 }
-.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover
 
-.nav-tabs .nav-link{
-  border-color: none !important;
+/* ============================================================================top menu========================================== */
+.navbar.navbar-wraper {
+  width: 100%;
+  height: 9vh;
+  background: var(--main);
+  border-bottom: 1px solid #66bfbf;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.nav-link{
-  color:white
+/* ============================================================================sidebar========================================== */
+
+
+
+
+
+
+/* ===================================================tabs title================================ */
+
+.tabs-title{
+  color: var(--main);
 }
-.nav-item{
-  border:none;
-}
+
+
