--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@ color: black !important;
 /* ============================================================================top menu========================================== */
 .navbar.navbar-wraper {
   width: 100%;
-  height: 9vh;
+ max-height: 80px;
   background: var(--main);
   border-bottom: 1px solid #66bfbf;
   display: flex;
