--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,16 @@
   position: relative !important;
 }
 }
+
+
+.is-table{
+  border-collapse: collapse;
+  /* border: .3px solid rgb(126, 104, 104); */
+  width: 100%;
+}
+.is-table th{
+  /* border: .3px solid rgb(135, 107, 107); */
+}
+.is-table input{
+  max-width: 80px;
+}
