--- a/src/Common.style.css
+++ b/src/Common.style.css
@@ -11,4 +11,5 @@
   font-size: 11px !important;
   color: var(--primarybg) !important;
   font-weight: bold !important;
+  padding: 2px 6px !important;
 }
